[package]
name = "launchify"
version = "0.2.0"
authors = ["Ryan Collingham <ryan@tokencard.io>"]
edition = "2018"
description = "Easy launch agents for macOS"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
regex = "1.4.3"
dirs = "3.0.1"
handlebars = "3.5.2"
serde_json = "1.0.62"
